<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_min"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bg_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contentLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@tools:sample/avatars"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/tittle_login"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoImage" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="18dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <EditText
                    android:id="@+id/txtUser"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/custom_input"
                    android:drawableEnd="@drawable/user_icon"
                    android:drawableTint="@color/gray_text_input"
                    android:ems="10"
                    android:fontFamily="@font/poppins_bold"
                    android:hint="@string/doc"
                    android:inputType="number"
                    android:paddingStart="10dp"
                    android:textColorHint="@color/gray_text_input"
                    tools:paddingEnd="10dp" />

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_input"
                    android:drawableEnd="@drawable/lock_icon"
                    android:drawableTint="@color/gray_text_input"
                    android:ems="10"
                    android:fontFamily="@font/poppins_bold"
                    android:hint="@string/pass"
                    android:inputType="number"
                    android:paddingStart="10dp"
                    android:textColorHint="@color/gray_text_input"
                    tools:paddingEnd="10dp" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_primary"
                    android:fontFamily="@font/poppins_bold"
                    android:padding="8dp"
                    android:text="@string/btn_login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnLogin2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_secondary"
                    android:fontFamily="@font/poppins_bold"
                    android:padding="8dp"
                    android:text="@string/text_register"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/text_foot_login"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>