<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_min">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/tittle_choose_schedule"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/custom_input">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnToday"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="3dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/bg_rounded_white"
                    android:fontFamily="@font/poppins_bold"
                    android:text="Hoy"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnTomorrow"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="3dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/bg_rounded_white"
                    android:fontFamily="@font/poppins_bold"
                    android:text="29 ene"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnAfterTomorrow"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="3dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/bg_rounded_white"
                    android:fontFamily="@font/poppins_bold"
                    android:text="30 ene"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnAfterAfterTomorrow"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="3dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/bg_rounded_white"
                    android:fontFamily="@font/poppins_bold"
                    android:text="31 ene"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textHora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/horario"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <Spinner
                android:id="@+id/dropHoras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input"
                android:dropDownWidth="match_parent"
                android:fontFamily="@font/poppins_bold"

                android:foregroundTint="@color/gray_text_input" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/choose_to_work"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <CheckBox
                        android:id="@+id/checkBoxPecho"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/green"
                        android:fontFamily="@font/poppins_bold"
                        android:foregroundTint="@color/white"
                        android:paddingLeft="5dp"
                        android:text="@string/pecho"
                        android:textColor="@color/white"
                        android:textColorHighlight="@color/green"
                        android:textColorHint="@color/white"
                        android:textColorLink="@color/white"
                        android:textSize="20sp"
                        tools:textColorHint="@color/green" />

                    <CheckBox
                        android:id="@+id/checkBoxEspalda"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/green"
                        android:fontFamily="@font/poppins_bold"
                        android:foregroundTint="@color/white"
                        android:paddingLeft="5dp"
                        android:text="@string/espalda"
                        android:textColor="@color/white"
                        android:textColorHighlight="@color/green"
                        android:textColorHint="@color/white"
                        android:textColorLink="@color/white"
                        android:textSize="20sp"
                        tools:textColorHint="@color/green" />

                    <CheckBox
                        android:id="@+id/checkBoxBrazo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/green"
                        android:fontFamily="@font/poppins_bold"
                        android:foregroundTint="@color/white"
                        android:paddingLeft="5dp"
                        android:text="@string/brazos"
                        android:textColor="@color/white"
                        android:textColorHighlight="@color/green"
                        android:textColorHint="@color/white"
                        android:textColorLink="@color/white"
                        android:textSize="20sp"
                        tools:textColorHint="@color/green" />

                    <CheckBox
                        android:id="@+id/checkBoxAbdomen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/green"
                        android:fontFamily="@font/poppins_bold"
                        android:foregroundTint="@color/white"
                        android:paddingLeft="5dp"
                        android:text="@string/Abdomen"
                        android:textColor="@color/white"
                        android:textColorHighlight="@color/green"
                        android:textColorHint="@color/white"
                        android:textColorLink="@color/white"
                        android:textSize="20sp"
                        tools:textColorHint="@color/green" />

                    <CheckBox
                        android:id="@+id/checkBoxHombros"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/green"
                        android:fontFamily="@font/poppins_bold"
                        android:foregroundTint="@color/white"
                        android:paddingLeft="5dp"
                        android:text="@string/hombros"
                        android:textColor="@color/white"
                        android:textColorHighlight="@color/green"
                        android:textColorHint="@color/white"
                        android:textColorLink="@color/white"
                        android:textSize="20sp"
                        tools:textColorHint="@color/green" />

                    <CheckBox
                        android:id="@+id/checkBoxPiernas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/green"
                        android:fontFamily="@font/poppins_bold"
                        android:foregroundTint="@color/white"
                        android:paddingLeft="5dp"
                        android:text="@string/piernas"
                        android:textColor="@color/white"
                        android:textColorHighlight="@color/green"
                        android:textColorHint="@color/white"
                        android:textColorLink="@color/white"
                        android:textSize="20sp"
                        tools:textColorHint="@color/green" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnBackToMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_secondary"
            android:fontFamily="@font/poppins_bold"
            android:padding="8dp"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_primary"
            android:fontFamily="@font/poppins_bold"
            android:padding="8dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/btnBackToMain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>