<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_min">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/motivational_text_1"
        android:textAlignment="center"
        android:textColor="@color/gray_text_input"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:fontFamily="@font/poppins_bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/textViewBienvenida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="Bienvenido, Hwarol"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtFecha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/bg_rounded_white"
                android:drawableStart="@drawable/fire_icon"
                android:fontFamily="@font/poppins_bold"
                android:padding="5dp"
                android:text="10 dias de racha"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtOcurrencyThisMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/bg_rounded_white"
                android:drawableStart="@drawable/calendar_icon"
                android:fontFamily="@font/poppins_bold"
                android:padding="5dp"
                android:text="10 dias este mes"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_input">

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnApartar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/bg_rounded_white"
                android:drawableTop="@drawable/clock_lg_icon"
                android:fontFamily="@font/poppins_bold"
                android:padding="8dp"
                android:text="@string/aparta"
                android:textAllCaps="false"
                tools:textSize="16sp" />

            <Button
                android:id="@+id/btnHistory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/bg_rounded_white"
                android:drawableTop="@drawable/history_lg_icon"
                android:fontFamily="@font/poppins_bold"
                android:padding="8dp"
                android:text="@string/history"
                android:textAllCaps="false"
                tools:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/bg_rounded_white"
                android:drawableTop="@drawable/user_lg_icon"
                android:fontFamily="@font/poppins_bold"
                android:padding="8dp"
                android:text="@string/profile"
                android:textAllCaps="false"
                tools:textSize="16sp" />

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/bg_rounded_white"
                android:drawableTop="@drawable/logout_lg_icon"
                android:fontFamily="@font/poppins_bold"
                android:padding="8dp"
                android:text="@string/logout"
                android:textAllCaps="false"
                tools:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/btnScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/black_min"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/scan_icon" />

    <ImageButton
        android:id="@+id/btnAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/black_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/admin_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>